# mua

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_STANDARDS.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml
.github/workflows/: quality.yml  release.yml
docs/: CONTRIBUTING.md  DEVELOPMENT_STANDARDS.md  design-system.md  development-standards.md  logging.md
src/: app.html
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aria2_client.rs  commands.rs  config.rs  config_default.json  lib.rs  main.rs  sidecar.rs  store.rs  sync.rs  tray.rs  utils.rs
src-tauri/src/aria2/: client.rs  mod.rs  sidecar.rs
src-tauri/src/core/: boot.rs  commands.rs  config.rs  error.rs  events.rs  logging.rs  mod.rs  store.rs  sync.rs  torrent.rs  types.rs
src-tauri/src/core/commands/: aria2_commands.rs  config_commands.rs  mod.rs  task_commands.rs
src-tauri/src/core/commands/task_commands/: add.rs  control.rs  mod.rs  query.rs  remove.rs
src-tauri/src/ui/: tray.rs
src/lib/: index.ts  utils.ts
src/lib/api/: aria2.ts  cmd.ts  download.ts  events.ts  platform.ts  settings.ts  torrent.ts
src/lib/components/: AddTaskDialog.svelte  ClearConfirmDialog.svelte  DownloadCard.svelte  HeaderToolbar.svelte  ParticleBackground.svelte  ProgressBar.svelte  Sidebar.svelte  (+4 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css  useHomePageOrchestration.svelte.ts  useTaskDetailsState.svelte.ts  useTaskViewState.svelte.ts
src/styles/: glass.css  theme-base.css  tokens.css
(+94 files in other folders)
