[package]
name = "mua"
version = "0.1.0"
description = "Modern Aria2 Download Manager built with Tauri and Svelte"
authors = ["you"]
license = "MIT"
repository = "https://github.com/lionly/Mua"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.11", features = ["json"] }
dirs = "6.0.0"
tauri-plugin-single-instance = "2.3.7"
chrono = "0.4"
image = "0.25.6"
rusttype = "0.9.3"
tokio = { version = "1.49.0", features = ["time"] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
uuid = { version = "1.20.0", features = ["v4"] }
futures = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
